# tvtr_control

./: .gitignore
devel/: .catkin  .rosinstall  local_setup.sh
src/: package.xml1
src/control/: CMakeLists.txt
src/control/config/: control.yaml
src/control/include/: cube_hardware_interface.h  l298n.h  roboclaw.h  test.h
src/control/launch/: arm_control_hardware.launch
src/control/src/: arm_hardware_interface.cpp  cube_hardware_interface.cpp  l298n.cpp  roboclaw.cpp  test.cpp
src/cr_bringup/: CMakeLists.txt  package.xml
src/cr_bringup/launch/: cr_core.launch
src/cr_camera/: CMakeLists.txt  launch  package.xml  rpi_node_script.py  server.launch  video_stream_opencv.launch
src/cr_control/: CMakeLists.txt  control1.yaml  cr_robot1_control.launch  package.xml
src/cr_control/config/: control.yaml  encoder_settings.yaml  wheel_hwin_settings.yaml
src/cr_control/include/cr_control/: roboclaw.h  wheel_hardware_interface.h
src/cr_control/launch/: cr_control.launch  cr_control_rosbag.launch  cr_control_rosbag_proxy.launch
src/cr_control/msg/: wheel_data.msg
src/cr_control/script/: automated_commands.py  start_trial.py  start_trial.sh
src/cr_control/src/: main.cpp  roboclaw.cpp  test_imu.cpp  wheel_hardware_interface.cpp
src/cr_control/src/TEST_DO_NOT_TOUCH/: roboclaw.cpp
src/cr_description/: CMakeLists.txt  cr.urdf  package.xml
src/cr_description/launch/: cr_description.launch
src/cr_description/urdf/: cr.urdf
src/cr_gazebo/: CMakeLists.txt  package.xml
src/cr_gazebo/launch/: cr_gazebo.launch  package.xml
src/cr_teleop/: CMakeLists.txt  cr_robot1_teleop.launch  package.xml
src/cr_teleop/launch/: cr_teleop.launch
src/launch/: CMakeLists.txt  package.xml
src/launch/src/: rtsp_stream.launch
src/test_control/: CMakeLists.txt  package.xml
src/test_control/config/: arm.yaml
src/test_control/include/test_control/: arm_hardware_interface.h  l298n.h
src/test_control/launch/: arm_control_hardware.launch
src/test_control/scripts/: pigpioInit.sh
src/test_control/src/: arm_hardware_interface.cpp  l298n.cpp
src/video_publisher/: CMakeLists.txt  package.xml  video_publisher.py
